# mercurio-host-adapters

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: docs.yml  python-wheels.yml
crates/mercurio-lsp/: Cargo.toml
crates/mercurio-lsp-host/: Cargo.toml
crates/mercurio-lsp-host/src/: lib.rs  main.rs
crates/mercurio-lsp-host/tests/: fixture_drift.rs
crates/mercurio-lsp-host/tests/fixtures/language-workbench/: expectations.json  types.sysml  use.sysml
crates/mercurio-lsp/src/: lib.rs
crates/mercurio-python/: Cargo.toml  pyproject.toml
crates/mercurio-python/src/: lib.rs
crates/mercurio-view-model/: Cargo.toml
crates/mercurio-view-model/src/: lib.rs
crates/mercurio-views/: Cargo.toml
crates/mercurio-views/src/: lib.rs
crates/mercurio-wasm/: Cargo.toml  README.md
crates/mercurio-wasm/src/: lib.rs
docs/: api.md  conf.py  index.md  release.md  requirements.txt
python/: AGENTS.md  API.md  CLAUDE.md  README.md  pyproject.toml
python/examples/: analysis_execution_showcase.py  basic_workspace.py
python/mercurio/: __init__.py  __init__.pyi  _core.pyi  authoring.py  authoring.pyi  backend.py  builder.py  capability.py  client.py  errors.py  lab.py  model.py  model.pyi  models.py  process.py  project.py  runtime.py  semantic.py  session.py  session.pyi  stdlib.py  stdlib.pyi  workspace.py
python/mercurio/_generated/: __init__.py  base.py  facades.py  metamodel.py
python/mercurio/extensions/: __init__.py  base.py  registry.py
python/mercurio_capability/: __init__.py
python/tests/: test_authoring.py  test_capability_runner.py  test_client.py  test_generated_facades.py  test_integration_backend.py  test_performance_baselines.py  test_runtime.py  test_semantic.py  test_session.py
scripts/: generate-python-sdk-manifest.py
vscode-dev/: .gitignore  README.md  extension.js  package-lock.json  package.json
vscode-dev/grammars/: mercurio.tmLanguage.json
vscode-dev/scripts/: package-vsix.js  smoke-containment.js  stage-server.js
