[workspace]
members = [
    "crates/mercurio-view-model",
    "crates/mercurio-python",
    "crates/mercurio-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Native Python and WebAssembly adapters for the Mercurio semantic platform."
repository = "https://github.com/mercurio-labs/mercurio-host-adapters"
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = "0.23"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
