[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mercurio"
version = "0.1.0b2"
description = "Python client and capability authoring SDK for Mercurio."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Mercurio Contributors" }
]

[project.optional-dependencies]
test = []
lab = ["matplotlib", "numpy"]

[tool.setuptools]
packages = ["mercurio", "mercurio.extensions", "mercurio_capability"]

[tool.setuptools.package-data]
mercurio = ["*.pyi", "py.typed"]
mercurio_capability = ["*.pyi", "py.typed"]
