[package]
name = "mercurio-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[features]
embed-stdlib = ["mercurio-sysml/embed-stdlib"]

[dependencies]
mercurio-core = { package = "mercurio-foundation", path = "../../../mercurio-foundation/crates/mercurio-foundation" }
mercurio-sysml = { path = "../../../mercurio-sysml/crates/mercurio-sysml" }
mercurio-view-model = { path = "../mercurio-view-model" }
pyo3 = { workspace = true, features = ["abi3-py310", "extension-module"] }
serde.workspace = true
serde_json.workspace = true
