[package]
name = "mercurio-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[features]
embed-stdlib = ["mercurio-sysml/embed-stdlib"]

[dependencies]
mercurio-core = { path = "../../../mercurio-foundation/crates/mercurio-core" }
mercurio-simulation = { path = "../../../mercurio-sysml/crates/mercurio-simulation" }
mercurio-sysml = { path = "../../../mercurio-sysml/crates/mercurio-sysml" }
mercurio-view-model = { path = "../mercurio-view-model" }
mercurio-views = { path = "../../../mercurio-foundation/crates/mercurio-views" }
pyo3 = { workspace = true, features = ["abi3-py310", "extension-module"] }
serde.workspace = true
serde_json.workspace = true
