[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "mercurio"
version = "0.1.0b1"
description = "Native Python bindings for Mercurio."
requires-python = ">=3.10"
license = "MIT"

[tool.maturin]
features = ["embed-stdlib"]
python-source = "../../python"
module-name = "mercurio._core"
include = [
  { path = "mercurio/**/*", format = "wheel" }
]
exclude = [
  { path = "mercurio/**/__pycache__/**", format = "wheel" }
]
