[package]
name = "mercurio-view-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mercurio-core = { path = "../../../mercurio-foundation/crates/mercurio-core" }
mercurio-views = { path = "../../../mercurio-foundation/crates/mercurio-views" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
