[package]
name = "mercurio-view-model"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
mercurio-core = { path = "../../../mercurio-foundation/crates/mercurio-core", version = "0.1.0" }
mercurio-views = { path = "../../../mercurio-foundation/crates/mercurio-views", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
