[package]
name = "mercurio-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook.workspace = true
mercurio-core = { path = "../../../mercurio-foundation/crates/mercurio-core", default-features = false }
mercurio-kerml = { path = "../../../mercurio-sysml/crates/mercurio-kerml" }
mercurio-lsp = { path = "../mercurio-lsp" }
mercurio-lsp-host = { path = "../mercurio-lsp-host" }
mercurio-simulation = { path = "../../../mercurio-sysml/crates/mercurio-simulation" }
mercurio-sysml = { path = "../../../mercurio-sysml/crates/mercurio-sysml" }
mercurio-views = { path = "../../../mercurio-foundation/crates/mercurio-views" }
serde = { workspace = true }
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true

